[package]
name = "splot"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
axum = { git = "https://github.com/tokio-rs/axum" }
tokio = { version = "1", features = ["macros"] }
async-stream = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tracing = "0.1"
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }